<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.demo.ui.login.LoginViewModel"/>
    </data>
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".ui.login.LoginActivity"
        android:background="@color/colorPrimary">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10">

            <com.demo.dynamicview.customview.CustomEditTextView
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@={viewModel.userEmail}"
                android:imeOptions="actionNext"
                android:padding="@dimen/dp_10"
                android:background="@drawable/bg_rounded_stroke"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10">

            <com.demo.dynamicview.customview.CustomEditTextView
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:text="@={viewModel.userPassword}"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/bg_rounded_stroke"/>

        </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginStart="@dimen/dp_5"
        android:orientation="horizontal">
        <com.demo.dynamicview.customview.CustomCheckBoxView

            android:id="@+id/checkBoxRememberMe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:button="@drawable/remember_selector"
            android:paddingLeft="@dimen/dp_5"
            android:paddingStart="@dimen/dp_5"
            android:text="@string/remember_me"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_14"/>
    </LinearLayout>



        <com.demo.dynamicview.customview.CustomBoldTextView
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_50"
            android:layout_marginEnd="@dimen/dp_50"
            android:background="@drawable/bg_black_ripple"
            android:gravity="center"
            android:paddingTop="@dimen/dp_15"
            android:paddingBottom="@dimen/dp_15"
            android:text="@string/signin"
            android:onClick="@{()->viewModel.login()}"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_18"/>

    </LinearLayout>
</layout>